--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dayjs": "^1.11.6",
+    "microcms-js-sdk": "^2.3.1",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.8",
+    "@types/node": "^18.11.9",
+    "@types/react": "^18.0.25",
     "autoprefixer": "10.4.0",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
@@ -19,7 +24,8 @@
     "postcss": "8.4.5",
     "prettier": "2.5.1",
     "prettier-plugin-tailwindcss": "0.1.1",
-    "tailwindcss": "3.0.7"
+    "tailwindcss": "3.0.7",
+    "typescript": "^4.8.4"
   },
   "postcss": {
     "plugins": {
